Word-wrap is needed too to prevent overflow

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@
 .flex-item {
     flex: 1 0 auto;
     max-width: 100%;
+    word-wrap: break-word;
 }
 
 #buttons {
